# maildrain

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test_runner.py
.claude/: settings.local.json
.github/workflows/: deploy.yml  terraform.yml  test.yml
depop/: config.py  gmail_client.py  imap_client.py  main.py  models.py  pop_client.py
etc/: servers.toml.example
maildrain/: config.py  gmail_client.py  imap_client.py  main.py  models.py  notifier.py  pop_client.py
terraform/: README.md  iam.tf  infra.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
tests/: README.md  conftest.py  test_gmail_client.py  test_models.py
