[tool.poetry]
name = "maildrain"
version = "0.1.0"
description = "Drain legacy IMAP/POP3 mailboxes into Gmail and archive the originals"
authors = []
packages = [{include = "maildrain"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.155.0"
google-auth-oauthlib = "^1.3.0"
google-auth = "^2.37.0"
imapclient = "^3.0.1"
python-dotenv = "^1.0.0"
google-cloud-secret-manager = "^2.26.0"
google-cloud-logging = "^3.11.0"

[tool.poetry.scripts]
maildrain = "maildrain.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
