[tool.poetry]
name = "maildrain"
version = "0.1.0"
description = "Drain legacy IMAP/POP3 mailboxes into Gmail and archive the originals"
authors = []
packages = [{include = "maildrain"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.155.0"
google-auth-oauthlib = "^1.3.0"
google-auth = "^2.37.0"
imapclient = "^3.0.1"
python-dotenv = "^1.0.0"
google-cloud-secret-manager = "^2.26.0"
google-cloud-logging = "^3.11.0"

[tool.poetry.scripts]
maildrain = "maildrain.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
