[tool.poetry]
name = "maildrain"
version = "0.1.0"
description = "Drain legacy IMAP/POP3 mailboxes into Gmail and archive the originals"
authors = []
packages = [{ include = "maildrain" }]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.193.0"
google-auth-oauthlib = "^1.3.0"
google-auth = "^2.49.1"
imapclient = "^3.0.1"
python-dotenv = "^1.2.2"
google-cloud-secret-manager = "^2.26.0"
google-cloud-logging = "^3.15.0"
ruff = "^0.15.10"
ruff-format = "^0.5.1"

[tool.poetry.scripts]
maildrain = "maildrain.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.10"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^7.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long - I don't care.
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# These packages ship without complete type stubs (or none at all).
# ignore_missing_imports suppresses "Cannot find implementation" errors.
# disallow_untyped_calls is relaxed because their public APIs lack annotations;
# the remaining call-site ignores in gmail_client.py cover the specific
# google-auth methods that still leak through (class methods on Credentials).
module = [
    "google.oauth2.*",
    "google.auth.*",
    "google_auth_oauthlib.*",
    "googleapiclient.*",
    "google.cloud.*",
    "imapclient.*",
    "dotenv",
    "pytest",
]
ignore_missing_imports = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
# Test files can be less strict about typing
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["--strict-markers", "--strict-config", "--verbose", "-ra"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["maildrain"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
skip_empty = false
precision = 1
